@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile$ $Name$($Revision$) $Date$
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2007/11/06 12:54:56 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,7 +45,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date$ by $Author$
+# Last Modified $Date: 2007/11/06 12:54:56 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -55,6 +55,9 @@ SUBDIRS = ss # bs cbc mg mgc sbc sg
 
 # =============================================================================
 #
-# $Log$
+# $Log: Makefile.am,v $
+# Revision 0.9.2.1  2007/11/06 12:54:56  brian
+# - added more top-level documentation
+#
 # =============================================================================
 # vim: ft=automake comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
