@@ -2,7 +2,7 @@
 % vim: ft=texinfo nosi nocin noai tw=100
 % =========================================================================
 %
-% @(#) $Id$
+% @(#) $Id: ss.texi,v 0.9.2.1 2007/11/06 12:54:57 brian Exp $
 %
 % =========================================================================
 %
@@ -54,11 +54,14 @@
 % 
 % =========================================================================
 %
-% Last Modified $Date$ by $Author$
+% Last Modified $Date: 2007/11/06 12:54:57 $ by $Author: brian $
 %
 % =========================================================================
 %
-% $Log$
+% $Log: ss.texi,v $
+% Revision 0.9.2.1  2007/11/06 12:54:57  brian
+% - added more top-level documentation
+%
 % =========================================================================
 \input texinfo @c -*- texinfo -*-
 @c vim: ft=texinfo nosi nocin noai tw=100
